drm/bridge: Add ITE IT6251 bridge driver
Add driver for the ITE IT6251 LVDS-to-eDP bridge.

Signed-off-by: Marek Vasut <marex@denx.de>
Signed-off-by: Richard Marko <srk@48.io>
Cc: Daniel Vetter <daniel@ffwll.ch>
Cc: Sean Cross <xobs@kosagi.com>
To: dri-devel@lists.freedesktop.org

--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -73,6 +73,18 @@ config DRM_FSL_LDB
 	help
 	  Support for i.MX8MP DPI-to-LVDS on-SoC encoder.
 
+config DRM_ITE_IT6251
+	tristate "ITE IT6251 LVDS/eDP bridge"
+	depends on OF
+	select DRM_KMS_HELPER
+	select DRM_PANEL
+	select REGMAP_I2C
+	help
+	  Driver for ITE IT6251 LVDS-eDP bridge chip driver. This is used
+	  in Novena open-hardware laptop with eDP based panel.
+	  IT6251 supports LVDS input and DisplayPort 1.1a output,
+	  resolution up to 1080P and 10-bit color depth.
+
 config DRM_ITE_IT6505
 	tristate "ITE IT6505 DisplayPort bridge"
 	depends on OF
